traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:28: error: not found: value isFinalePostion
  while(!isFinalePostion()){
         ^